# discord-habitica

./: .dockerignore  .env  .env.default  .gitignore  Dockerfile  Pipfile  async_transact_experiment.py  bot.py  commands.py  config.py  diagram_class_relationships.drawio  diagram_scratch.drawio  discord_bot.py  discord_habitica.py  docker-compose.yml  logging.json  pyproject.toml  registration_cache.py  registration_cache_test.py  test_decorator.py
app/: app_service.py  app_user_service.py  bank_service.py  transaction_service.py  transactor_service.py  transactor_service_old.py  utils.py  webhook_service.py
app/events/: app_events.py  bank_events.py  discord_events.py  event_service.py  habitica_events.py
app/handlers/: app_service_handlers.py  bank_handlers.py
app/model/: app_user.py  (+1 more)
cogs/: app_cog.py  bank_cog.py  base_cog.py  command_sync.py  habitica_cog.py  habitica_group_chat_cog.py  messaging_cog.py
discord_bot/: bot.py
discord_service/: discord_bot.py
habitica/: habitica_api.py  habitica_group.py  habitica_service.py  habitica_user.py  habitica_webhook.py
persistence/: driver_base_new.py  file_driver.py  file_driver_new.py  memory_driver_new.py  persistence.py
test/: app_service_test.py  app_user_service_test.py  bank_handler_test.py  bank_test.py  driver_new_test.py  driver_test.py  event_test.py  file_driver_test.py  habitica_api_mock.py  habitica_api_test.py  habitica_cog.py  habitica_group.py  habitica_model_test.py  habitica_service_test.py  habitica_user_test.py  lab.py  transaction_test.py  transactor_test.py
web_server/: server.py
(+23 files in other folders)
